--- a/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/toWobbleDeliveryBranch.yaml
+++ b/TeamCode/src/main/java/org/firstinspires/ftc/teamcode/toWobbleDeliveryBranch.yaml
@@ -1,13 +1,13 @@
 ---
 startPose:
-  x: 9.0
-  y: 9.0
-  heading: 0.0
+  x: -63.0
+  y: -48.0
+  heading: -1.5707963267948966
 startTangent: 0.0
 waypoints:
 - position:
-    x: 9.0
-    y: 9.0
+    x: -12.0
+    y: -48.0
   heading: 0.0
   tangent: 0.0
   interpolationType: "TANGENT"
